bugfix rate conversion double multiplication

--- a/data/amsterdam-umc-db/DataExtraction_AmsterdamUMCdb_AllAdmissions.ipynb
+++ b/data/amsterdam-umc-db/DataExtraction_AmsterdamUMCdb_AllAdmissions.ipynb
@@ -186,8 +186,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Admission start:   2022-11-23 15:04:54.935704\n",
-      "Two hours in:      2022-11-23 17:04:54.935704\n"
+      "Admission start:   2022-11-24 13:19:57.069790\n",
+      "Two hours in:      2022-11-24 15:19:57.069790\n"
      ]
     }
    ],
@@ -248,36 +248,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-23 15:04:54.935704</td>\n",
-       "      <td>2022-11-26 15:04:54.935704</td>\n",
+       "      <td>2022-11-24 13:19:57.069790</td>\n",
+       "      <td>2022-11-27 13:19:57.069790</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>2022-11-23 15:04:54.935704</td>\n",
-       "      <td>2022-11-26 15:04:54.935704</td>\n",
+       "      <td>2022-11-24 13:19:57.069790</td>\n",
+       "      <td>2022-11-27 13:19:57.069790</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>2022-11-23 15:04:54.935704</td>\n",
-       "      <td>2022-11-26 15:04:54.935704</td>\n",
+       "      <td>2022-11-24 13:19:57.069790</td>\n",
+       "      <td>2022-11-27 13:19:57.069790</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>2022-11-23 15:04:54.935704</td>\n",
-       "      <td>2022-11-26 15:04:54.935704</td>\n",
+       "      <td>2022-11-24 13:19:57.069790</td>\n",
+       "      <td>2022-11-27 13:19:57.069790</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>2022-11-23 15:04:54.935704</td>\n",
-       "      <td>2022-11-26 15:04:54.935704</td>\n",
+       "      <td>2022-11-24 13:19:57.069790</td>\n",
+       "      <td>2022-11-27 13:19:57.069790</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -286,11 +286,11 @@
       ],
       "text/plain": [
        "   icustay_id               window_start                 window_end  \\\n",
-       "0           0 2022-11-23 15:04:54.935704 2022-11-26 15:04:54.935704   \n",
-       "1           1 2022-11-23 15:04:54.935704 2022-11-26 15:04:54.935704   \n",
-       "2           2 2022-11-23 15:04:54.935704 2022-11-26 15:04:54.935704   \n",
-       "3           3 2022-11-23 15:04:54.935704 2022-11-26 15:04:54.935704   \n",
-       "4           4 2022-11-23 15:04:54.935704 2022-11-26 15:04:54.935704   \n",
+       "0           0 2022-11-24 13:19:57.069790 2022-11-27 13:19:57.069790   \n",
+       "1           1 2022-11-24 13:19:57.069790 2022-11-27 13:19:57.069790   \n",
+       "2           2 2022-11-24 13:19:57.069790 2022-11-27 13:19:57.069790   \n",
+       "3           3 2022-11-24 13:19:57.069790 2022-11-27 13:19:57.069790   \n",
+       "4           4 2022-11-24 13:19:57.069790 2022-11-27 13:19:57.069790   \n",
        "\n",
        "   hospital_expire_flag  \n",
        "0                     0  \n",
@@ -420,7 +420,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 23106/23106 [01:28<00:00, 260.70it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████| 23106/23106 [01:27<00:00, 263.96it/s]"
      ]
     },
     {
@@ -453,14 +453,6 @@
     "        \n",
     "print('Number of admissions with ventilation:', len(admissions_with_vent))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5628724d-e184-44b1-8c67-6729f8449891",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2195,7 +2187,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████▋| 22999/23106 [00:21<00:00, 1054.79it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████▋| 22999/23106 [00:19<00:00, 1180.91it/s]\n"
      ]
     },
     {
@@ -2231,8 +2223,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-23 19:36:34.839286</td>\n",
-       "      <td>2022-11-23 19:37:34.839286</td>\n",
+       "      <td>2022-11-24 18:54:57.069790</td>\n",
+       "      <td>2022-11-24 18:55:57.069790</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2240,8 +2232,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-24 04:36:34.839286</td>\n",
-       "      <td>2022-11-24 04:37:34.839286</td>\n",
+       "      <td>2022-11-25 03:54:57.069790</td>\n",
+       "      <td>2022-11-25 03:55:57.069790</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -2249,28 +2241,28 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-24 13:36:34.839286</td>\n",
-       "      <td>2022-11-24 13:37:34.839286</td>\n",
+       "      <td>2022-11-25 12:54:57.069790</td>\n",
+       "      <td>2022-11-25 12:55:57.069790</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-11-24 16:09:57.069790</td>\n",
+       "      <td>2022-11-24 16:10:57.069790</td>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-23 22:30:34.839286</td>\n",
-       "      <td>2022-11-23 23:30:34.839286</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-11-25 04:09:57.069790</td>\n",
+       "      <td>2022-11-25 04:10:57.069790</td>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-24 02:44:34.839286</td>\n",
-       "      <td>2022-11-24 03:44:34.839286</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2279,18 +2271,18 @@
       ],
       "text/plain": [
        "   icustay_id                  starttime                    endtime  \\\n",
-       "0           0 2022-11-23 19:36:34.839286 2022-11-23 19:37:34.839286   \n",
-       "1           0 2022-11-24 04:36:34.839286 2022-11-24 04:37:34.839286   \n",
-       "2           0 2022-11-24 13:36:34.839286 2022-11-24 13:37:34.839286   \n",
-       "3           0 2022-11-23 22:30:34.839286 2022-11-23 23:30:34.839286   \n",
-       "4           0 2022-11-24 02:44:34.839286 2022-11-24 03:44:34.839286   \n",
+       "0           0 2022-11-24 18:54:57.069790 2022-11-24 18:55:57.069790   \n",
+       "1           0 2022-11-25 03:54:57.069790 2022-11-25 03:55:57.069790   \n",
+       "2           0 2022-11-25 12:54:57.069790 2022-11-25 12:55:57.069790   \n",
+       "3           1 2022-11-24 16:09:57.069790 2022-11-24 16:10:57.069790   \n",
+       "4           1 2022-11-25 04:09:57.069790 2022-11-25 04:10:57.069790   \n",
        "\n",
        "   sepsis_antibiotics  profyl_antibiotics  profyl_other  \n",
        "0                   0                   1             0  \n",
        "1                   0                   1             0  \n",
        "2                   0                   1             0  \n",
-       "3                   0                   0             0  \n",
-       "4                   0                   0             0  "
+       "3                   0                   1             0  \n",
+       "4                   0                   1             0  "
       ]
      },
      "execution_count": 19,
@@ -2308,19 +2300,20 @@
     "    if not len(chunk):\n",
     "        continue\n",
     "    \n",
-    "    # which of those admissions indicate the use of antibiotics\n",
+    "    # which of those admissions indicate the use of some kind antibiotics\n",
     "    sepsis_antibiotics = chunk.itemid.isin(SEPSIS_ANTIBIOTICS)\n",
     "    profyl_antibiotics = chunk.itemid.isin(PROFYL_ANTIBIOTICS)\n",
     "    profyl_other = chunk.itemid.isin(OTHER_PROFYL)\n",
+    "    any_antibiotics = sepsis_antibiotics | profyl_antibiotics | profyl_other\n",
     "        \n",
     "    # convert to DataFrame\n",
     "    antibiotics_df = pd.DataFrame({\n",
-    "        'icustay_id': chunk.admissionid,\n",
-    "        'starttime': to_timestamp(first_admission_start, ms=chunk.start),\n",
-    "        'endtime': to_timestamp(first_admission_start, ms=chunk.stop),\n",
-    "        'sepsis_antibiotics': sepsis_antibiotics.astype(int),\n",
-    "        'profyl_antibiotics': profyl_antibiotics.astype(int),\n",
-    "        'profyl_other': profyl_other.astype(int),\n",
+    "        'icustay_id': chunk[any_antibiotics].admissionid,\n",
+    "        'starttime': to_timestamp(first_admission_start, ms=chunk[any_antibiotics].start),\n",
+    "        'endtime': to_timestamp(first_admission_start, ms=chunk[any_antibiotics].stop),\n",
+    "        'sepsis_antibiotics': sepsis_antibiotics[any_antibiotics].astype(int),\n",
+    "        'profyl_antibiotics': profyl_antibiotics[any_antibiotics].astype(int),\n",
+    "        'profyl_other': profyl_other[any_antibiotics].astype(int),\n",
     "    })\n",
     "    antibiotics_dfs.append(antibiotics_df)\n",
     "        \n",
@@ -2600,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "6de4d5f5-c06e-49da-b923-67da7c0de7b9",
    "metadata": {},
    "outputs": [],
@@ -2750,7 +2743,7 @@
     "            \n",
     "            # Rate conversion form kPa to mmHg\n",
     "            lab_chunk = chunk[is_lab].copy()\n",
-    "            lab_chunk.loc[lab_chunk.unitid == 152, 'value'] *= lab_chunk.value * 7.50061683\n",
+    "            lab_chunk.loc[lab_chunk.unitid == 152, 'value'] = lab_chunk.value * 7.50061683\n",
     "            \n",
     "            # Store lab measurements in new DataFrame\n",
     "            lab_df = pd.DataFrame({\n",
