--- a/data/amsterdam-umc-db/DataExtraction_AmsterdamUMCdb_AllAdmissions.ipynb
+++ b/data/amsterdam-umc-db/DataExtraction_AmsterdamUMCdb_AllAdmissions.ipynb
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "4de48f9f-c5a7-40cb-a0f1-58fe36ff40af",
    "metadata": {},
    "outputs": [],
@@ -2577,7 +2577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "db6b97f2-8fa4-41ce-a689-be34e62f805e",
    "metadata": {},
    "outputs": [],
@@ -2596,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "00f1605c-c72c-4203-822b-c38373ec4711",
    "metadata": {},
    "outputs": [],
@@ -3360,7 +3360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "842800dd-0ab9-4144-b517-26d8ecc0ea95",
    "metadata": {},
    "outputs": [],
@@ -3376,128 +3376,36 @@
     "    # 15, # Injecties Antimicrobiele middelen\n",
     "    17, # Infuus - Colloid\n",
     "    # 61, # Infuus - Bloedproducten\n",
+    "]\n",
+    "\n",
+    "# by excluding the following we will (mostly) restrict ourselves to those fluid\n",
+    "# infusions that concern fluid resuscitation, not administration of medication\n",
+    "IV_EXCLUDE = [\n",
+    "    'Vitamine B Complex',\n",
+    "    'Medicijnlijn medicatie',\n",
+    "    'Mannitol 20% Solution',\n",
+    "    'CVVH-Vocht teruggave',\n",
+    "    'Drukzak Heparine',\n",
+    "    'Research PHP/Placebo',\n",
+    "    'Metronidazol-Flagyl',\n",
+    "    'Glucose 40%',\n",
+    "    'Glucose 30%',\n",
+    "    'Glucose 20%',\n",
+    "    'Glucose 10%',\n",
+    "    'Glucose 5 %',\n",
+    "    'Research BHR-100/Placebo',\n",
+    "    'Medicijnlijn spoelen',\n",
+    "    'Drukzak IABP',\n",
+    "    'NaCL 0,9% CO-meting',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "aed83d00-c589-40b8-b3d6-f122bf70e335",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████▋| 22999/23106 [00:24<00:00, 950.90it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>icustay_id</th>\n",
-       "      <th>starttime</th>\n",
-       "      <th>endtime</th>\n",
-       "      <th>itemid</th>\n",
-       "      <th>ordercategoryname</th>\n",
-       "      <th>amountuom</th>\n",
-       "      <th>amount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2022-01-01 08:29:00</td>\n",
-       "      <td>2022-01-01 09:29:00</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Infuus - Colloid</td>\n",
-       "      <td>ml</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2022-01-01 12:43:00</td>\n",
-       "      <td>2022-01-01 13:43:00</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Infuus - Colloid</td>\n",
-       "      <td>ml</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2022-01-02 00:29:00</td>\n",
-       "      <td>2022-01-02 00:59:00</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Infuus - Colloid</td>\n",
-       "      <td>ml</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2022-01-02 10:36:00</td>\n",
-       "      <td>2022-01-02 11:36:00</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Infuus - Colloid</td>\n",
-       "      <td>ml</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2022-01-01 05:42:00</td>\n",
-       "      <td>2022-01-01 13:23:00</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>Infuus - Crystalloid</td>\n",
-       "      <td>ml</td>\n",
-       "      <td>500.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   icustay_id           starttime             endtime  itemid  \\\n",
-       "0           0 2022-01-01 08:29:00 2022-01-01 09:29:00      -1   \n",
-       "1           0 2022-01-01 12:43:00 2022-01-01 13:43:00      -1   \n",
-       "2           0 2022-01-02 00:29:00 2022-01-02 00:59:00      -1   \n",
-       "3           0 2022-01-02 10:36:00 2022-01-02 11:36:00      -1   \n",
-       "4           0 2022-01-01 05:42:00 2022-01-01 13:23:00      -1   \n",
-       "\n",
-       "      ordercategoryname amountuom  amount  \n",
-       "0      Infuus - Colloid        ml   500.0  \n",
-       "1      Infuus - Colloid        ml   500.0  \n",
-       "2      Infuus - Colloid        ml   500.0  \n",
-       "3      Infuus - Colloid        ml   500.0  \n",
-       "4  Infuus - Crystalloid        ml   500.0  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fluid_cols = ['admissionid', 'itemid', 'item', 'start', 'stop', 'ordercategory', 'ordercategoryid', 'administered', 'administeredunitid']\n",
     "\n",
@@ -3509,7 +3417,7 @@
     "    chunk = chunk[(starttimes > -1) & (starttimes < 168)].copy()\n",
     "        \n",
     "    # extract drugitems corresponding to intravenous infusion in ml\n",
-    "    chunk = chunk[chunk.ordercategoryid.isin(IV_CATEGORIES) & (chunk.administeredunitid == 6)].copy()\n",
+    "    chunk = chunk[chunk.ordercategoryid.isin(IV_CATEGORIES) & ~chunk.item.isin(IV_EXCLUDE) & (chunk.administeredunitid == 6)].copy()\n",
     "        \n",
     "    # TODO: tonicity\n",
     "\n",
@@ -3528,6 +3436,60 @@
     "# merge\n",
     "iv_fluids_df = pd.concat(iv_fluids_df, axis=0).reset_index(drop=True)\n",
     "iv_fluids_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bb3a8c08-84eb-45f7-873f-2be0db50744e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NaCl 0,45%/Glucose 2,5%            117779\n",
+       "NaCl 0,9 %                          55547\n",
+       "Drukzak                             46665\n",
+       "Gelofusine                          37100\n",
+       "Ri-Lac (Ringers lactaat)            33057\n",
+       "Glucose 5 %                         14093\n",
+       "Vitamine B Complex                   7993\n",
+       "Medicijnlijn medicatie               5930\n",
+       "Natrium bicarbonaat 8,4 %            2468\n",
+       "Mannitol 20% Solution                2278\n",
+       "Glucose 40%                          2198\n",
+       "Haes 10%                             1791\n",
+       "Albumine 20%                         1697\n",
+       "Natrium bicarbonaat 1.4%              715\n",
+       "NaCL 2,9%                             410\n",
+       "Natriumbicarbonaat  8,4%              409\n",
+       "Voluven                               401\n",
+       "Mannitol 15%                          316\n",
+       "CVVH-Vocht teruggave                  256\n",
+       "X- Crystalloïd nader te bepalen       238\n",
+       "NaCL 0,9% CO-meting                   167\n",
+       "NaCl 0.65 %                           162\n",
+       "Medicijnlijn spoelen                  136\n",
+       "Drukzak IABP                          113\n",
+       "Research BHR-100/Placebo               62\n",
+       "Natrium bicarbonaat 4,2 %              49\n",
+       "Glucose 20%                            39\n",
+       "Metronidazol-Flagyl                    22\n",
+       "X Colloïd nader te bepalen             22\n",
+       "Glucose 10%                            20\n",
+       "Research PHP/Placebo                   12\n",
+       "Drukzak Heparine                        6\n",
+       "Glucose 30 %                            2\n",
+       "Name: item, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iv_fluids_df.item.value_counts()"
    ]
   },
   {
