added central venous pressure (CVP/CVD)

--- a/data/mimic-iii/extract_mimic-iii_hematocrit_d-dimer_svo2.ipynb
+++ b/data/mimic-iii/extract_mimic-iii_hematocrit_d-dimer_svo2.ipynb
@@ -156,7 +156,7 @@
    "id": "3d50bf69-d28c-4945-8f03-0ea1d057d0c5",
    "metadata": {},
    "source": [
-    "### Hematocrit, S(c)vO2 and D-Dimer\n",
+    "### Hematocrit, Central Venous Oxygen Saturation/Pressure and D-Dimer\n",
     "\n",
     "Sources: \n",
     "- [D_LABITEMS.csv - MIMIC_III](https://physionet.org/content/mimiciii-demo/1.4/D_LABITEMS.csv)\n",
@@ -206,42 +206,107 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10265</th>\n",
-       "      <td>14787</td>\n",
-       "      <td>227542</td>\n",
-       "      <td>ScvO2 (Presep) Calibrated</td>\n",
-       "      <td>ScvO2 (Presep) Calibrated</td>\n",
-       "      <td>metavision</td>\n",
-       "      <td>datetimeevents</td>\n",
-       "      <td>Hemodynamics</td>\n",
+       "      <th>4543</th>\n",
+       "      <td>4737</td>\n",
+       "      <td>7645</td>\n",
+       "      <td>Central line SVO2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Date time</td>\n",
+       "      <td>carevue</td>\n",
+       "      <td>chartevents</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10269</th>\n",
-       "      <td>14791</td>\n",
-       "      <td>227549</td>\n",
-       "      <td>ScvO2 (Presep)</td>\n",
-       "      <td>ScvO2 (Presep)</td>\n",
+       "      <th>10749</th>\n",
+       "      <td>14142</td>\n",
+       "      <td>225707</td>\n",
+       "      <td>Central Line ordered on POE</td>\n",
+       "      <td>Central Line ordered on POE</td>\n",
        "      <td>metavision</td>\n",
        "      <td>chartevents</td>\n",
-       "      <td>Hemodynamics</td>\n",
+       "      <td>CVL Insertion</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Checkbox</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11074</th>\n",
+       "      <td>15119</td>\n",
+       "      <td>228036</td>\n",
+       "      <td>Central Line ordered on POE</td>\n",
+       "      <td>Central Line ordered on POE</td>\n",
+       "      <td>metavision</td>\n",
+       "      <td>chartevents</td>\n",
+       "      <td>CVL Insertion</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Text</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11188</th>\n",
+       "      <td>15020</td>\n",
+       "      <td>227685</td>\n",
+       "      <td>ZCentral Venous O2% Sat</td>\n",
+       "      <td>ZCentral Venous O2% Sat</td>\n",
+       "      <td>metavision</td>\n",
+       "      <td>chartevents</td>\n",
+       "      <td>Labs</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Numeric</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11189</th>\n",
+       "      <td>15021</td>\n",
+       "      <td>227686</td>\n",
+       "      <td>Central Venous O2% Sat</td>\n",
+       "      <td>Central Venous O2% Sat</td>\n",
+       "      <td>metavision</td>\n",
+       "      <td>chartevents</td>\n",
+       "      <td>Labs</td>\n",
        "      <td>%</td>\n",
        "      <td>Numeric</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10601</th>\n",
-       "      <td>14928</td>\n",
-       "      <td>227806</td>\n",
-       "      <td>ScvO2 (Presep) SQI</td>\n",
-       "      <td>ScvO2 (Presep) SQI</td>\n",
+       "      <th>11513</th>\n",
+       "      <td>12727</td>\n",
+       "      <td>220072</td>\n",
+       "      <td>Central Venous Pressure Alarm - High</td>\n",
+       "      <td>CVP Alarm - High</td>\n",
+       "      <td>metavision</td>\n",
+       "      <td>chartevents</td>\n",
+       "      <td>Alarms</td>\n",
+       "      <td>mmHg</td>\n",
+       "      <td>Numeric</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11514</th>\n",
+       "      <td>12728</td>\n",
+       "      <td>220073</td>\n",
+       "      <td>Central Venous Pressure  Alarm - Low</td>\n",
+       "      <td>CVP Alarm - Low</td>\n",
+       "      <td>metavision</td>\n",
+       "      <td>chartevents</td>\n",
+       "      <td>Alarms</td>\n",
+       "      <td>mmHg</td>\n",
+       "      <td>Numeric</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11515</th>\n",
+       "      <td>12729</td>\n",
+       "      <td>220074</td>\n",
+       "      <td>Central Venous Pressure</td>\n",
+       "      <td>CVP</td>\n",
        "      <td>metavision</td>\n",
        "      <td>chartevents</td>\n",
        "      <td>Hemodynamics</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Text</td>\n",
+       "      <td>mmHg</td>\n",
+       "      <td>Numeric</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -262,22 +327,37 @@
        "</div>"
       ],
       "text/plain": [
-       "       ROW_ID  ITEMID                         LABEL  \\\n",
-       "10265   14787  227542     ScvO2 (Presep) Calibrated   \n",
-       "10269   14791  227549                ScvO2 (Presep)   \n",
-       "10601   14928  227806            ScvO2 (Presep) SQI   \n",
-       "11892   14408  226541  ScvO2 Central Venous O2% Sat   \n",
+       "       ROW_ID  ITEMID                                 LABEL  \\\n",
+       "4543     4737    7645                     Central line SVO2   \n",
+       "10749   14142  225707           Central Line ordered on POE   \n",
+       "11074   15119  228036           Central Line ordered on POE   \n",
+       "11188   15020  227685               ZCentral Venous O2% Sat   \n",
+       "11189   15021  227686                Central Venous O2% Sat   \n",
+       "11513   12727  220072  Central Venous Pressure Alarm - High   \n",
+       "11514   12728  220073  Central Venous Pressure  Alarm - Low   \n",
+       "11515   12729  220074               Central Venous Pressure   \n",
+       "11892   14408  226541          ScvO2 Central Venous O2% Sat   \n",
        "\n",
-       "                       ABBREVIATION    DBSOURCE         LINKSTO      CATEGORY  \\\n",
-       "10265     ScvO2 (Presep) Calibrated  metavision  datetimeevents  Hemodynamics   \n",
-       "10269                ScvO2 (Presep)  metavision     chartevents  Hemodynamics   \n",
-       "10601            ScvO2 (Presep) SQI  metavision     chartevents  Hemodynamics   \n",
-       "11892  ScvO2 Central Venous O2% Sat  metavision     chartevents          Labs   \n",
+       "                       ABBREVIATION    DBSOURCE      LINKSTO       CATEGORY  \\\n",
+       "4543                            NaN     carevue  chartevents            NaN   \n",
+       "10749   Central Line ordered on POE  metavision  chartevents  CVL Insertion   \n",
+       "11074   Central Line ordered on POE  metavision  chartevents  CVL Insertion   \n",
+       "11188       ZCentral Venous O2% Sat  metavision  chartevents           Labs   \n",
+       "11189        Central Venous O2% Sat  metavision  chartevents           Labs   \n",
+       "11513              CVP Alarm - High  metavision  chartevents         Alarms   \n",
+       "11514               CVP Alarm - Low  metavision  chartevents         Alarms   \n",
+       "11515                           CVP  metavision  chartevents   Hemodynamics   \n",
+       "11892  ScvO2 Central Venous O2% Sat  metavision  chartevents           Labs   \n",
        "\n",
        "      UNITNAME PARAM_TYPE  CONCEPTID  \n",
-       "10265      NaN  Date time        NaN  \n",
-       "10269        %    Numeric        NaN  \n",
-       "10601      NaN       Text        NaN  \n",
+       "4543       NaN        NaN        NaN  \n",
+       "10749      NaN   Checkbox        NaN  \n",
+       "11074      NaN       Text        NaN  \n",
+       "11188     None    Numeric        NaN  \n",
+       "11189        %    Numeric        NaN  \n",
+       "11513     mmHg    Numeric        NaN  \n",
+       "11514     mmHg    Numeric        NaN  \n",
+       "11515     mmHg    Numeric        NaN  \n",
        "11892     None    Numeric        NaN  "
       ]
      },
@@ -288,7 +368,7 @@
    ],
    "source": [
     "dct = pd.read_csv('D:/mimic-iii-clinical-database-1.4/D_ITEMS.csv')\n",
-    "dct = dct[dct.LABEL.str.contains('SCVO', case=False).fillna(False)]\n",
+    "dct = dct[dct.LABEL.str.contains('central', case=False).fillna(False)]\n",
     "dct"
    ]
   },
@@ -319,6 +399,10 @@
     "    223772, # -- SvO2\n",
     "    226541, # -- ScvO2 Central Venous O2% Sat (not the same but only 2-3% different)\n",
     "    227549, # -- ScvO2 (Presep)\n",
+    "]\n",
+    "\n",
+    "CVP = [\n",
+    "    220074 # -- Central Venous Pressure\n",
     "]\n",
     "\n",
     "VALUENUM_RANGES = {\n",
@@ -352,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "50ea2c49-c54a-44c6-8ad9-f6e82fd3ded8",
    "metadata": {},
    "outputs": [
@@ -360,7 +444,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "523it [00:24, 22.30it/s]"
+      "2786it [02:08, 21.71it/s]\n"
      ]
     }
    ],
@@ -378,7 +462,6 @@
     "    chunk['LABID'] = ''\n",
     "    chunk.loc[chunk.ITEMID.isin(HEMATOCRIT), 'LABID'] = 'HEMATOCRIT'\n",
     "    chunk.loc[chunk.ITEMID.isin(DDIMER), 'LABID'] = 'D-DIMER'\n",
-    "    chunk.loc[chunk.ITEMID.isin(SVO2), 'LABID'] = 'SVO2'\n",
     "    \n",
     "    # Map non-integer VALUE column of D-Dimer to values\n",
     "    chunk.loc[chunk.ITEMID == 50915, 'VALUENUM'] = chunk.VALUE.transform(lambda x: range_to_valuenum(x))\n",
@@ -403,19 +486,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3d95fe8b-a797-4b9a-ba0d-7e54c289c51e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "33072it [16:13, 33.96it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "for _, chunk in tqdm(read_csv(r\"D:/mimic-iii-clinical-database-1.4/CHARTEVENTS.csv\", usecols=['SUBJECT_ID', 'ITEMID', 'CHARTTIME', 'VALUENUM'])):\n",
     "    # Limit measurements to CvO2\n",
-    "    chunk = chunk[chunk.ITEMID.isin(HEMATOCRIT + DDIMER + SVO2)].copy()\n",
+    "    chunk = chunk[chunk.ITEMID.isin(HEMATOCRIT + DDIMER + SVO2 + CVP)].copy()\n",
     "    \n",
     "    chunk['LABID'] = ''\n",
     "    chunk.loc[chunk.ITEMID.isin(HEMATOCRIT), 'LABID'] = 'HEMATOCRIT'\n",
     "    chunk.loc[chunk.ITEMID.isin(DDIMER), 'LABID'] = 'D-DIMER'\n",
     "    chunk.loc[chunk.ITEMID.isin(SVO2), 'LABID'] = 'SVO2'\n",
+    "    chunk.loc[chunk.ITEMID.isin(CVP), 'LABID'] = 'CVD'\n",
     "    \n",
     "    if not len(chunk):\n",
     "        continue\n",
@@ -435,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "75ff55f2-53e5-4ff9-8807-63b0fb9217d7",
    "metadata": {},
    "outputs": [],
