--- a/exploratory_analysis/duration_of_admissions.ipynb
+++ b/exploratory_analysis/duration_of_admissions.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "a056f405-04f8-46b4-9ba0-d9977f0132b8",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "e9ca261f-abc3-4458-89a8-d543b244f1c2",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,10 @@
       "0.25-Q: 26.59\n",
       "Median: 50.21\n",
       "0.75-Q: 107.60\n",
-      "Max:    4153.74\n"
+      "Max:    4153.74\n",
+      "\n",
+      "Mean:   118.03\n",
+      "SD:     231.33\n"
      ]
     }
    ],
@@ -174,7 +177,10 @@
     "print('0.25-Q: %.2f' % np.quantile(mimic_los, q=0.25))\n",
     "print('Median: %.2f' % np.median(mimic_los))\n",
     "print('0.75-Q: %.2f' % np.quantile(mimic_los, q=0.75))\n",
-    "print('Max:    %.2f' % np.max(mimic_los))"
+    "print('Max:    %.2f' % np.max(mimic_los))\n",
+    "\n",
+    "print('\\nMean:   %.2f' % np.mean(mimic_los))\n",
+    "print('SD:     %.2f' % np.std(mimic_los))"
    ]
   }
  ],
